# Ingestion-Prototyp

./: .env.example  .gitignore  CLAUDE.md  EXPERIMENT_LOG.md  README.md  Test.py  pyproject.toml
.claude/: settings.local.json
.github/: copilot-instructions.md
data/eval/: questions.jsonl  testset_v1.jsonl
docs/: ai_protokoll.md
docs/verification/: AP13_pipeline_verification_2026-05-15.md
scripts/Pipeline/: 00_prepare_forum.py  00_prepare_handbuecher.py  00_prepare_modulbeschreibungen.py  00_prepare_schulungsunterlagen.py  00_prepare_tickets.py  01_ingest.py  02_index.py  02b_describe_v4_images.py  03_query.py  04_evaluate.py
scripts/analysis/: forum_analysis.py  handbuecher_analysis.py  migrate_testset_to_v2.py  modulbeschreibungen_analysis.py  schuelungsunterlagen_analysis.py  smoke_ap61d.py  smoke_ap8_v3.py  tickets_analysis.py  v1_token_estimate.py  v2_keywords_estimate.py  v2_tagging_estimate.py  v4_image_analysis.py
scripts/eval/: aggregate_full_run.py  analyze_missing_scores.py  archive_smoke_bundles.py  consolidate_answers.py  diagnose_factual_correctness.py  (+3 more)
src/rag/: __init__.py  (+2 more)
tests/: __init__.py  test_bm25_index.py  test_chunking_v1.py  test_chunking_v2.py  test_chunking_v4.py  test_index_chunking.py  test_keyword_generator.py  test_llm_tagger.py  test_preparation_forum.py  test_preparation_handbuecher.py  test_preparation_modulbeschreibungen.py  test_preparation_schulungsunterlagen.py  test_preparation_tickets.py  test_recency_reranker.py  test_reporter.py  test_retrieval_and_prompts.py  test_retriever_hybrid.py  test_retriever_v3.py  test_runner.py  test_scorer.py  test_testset.py  test_vlm_image_describer.py
(+78 files in other folders)
