[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "naive-rag-baseline"
version = "0.1.0"
description = "Naive RAG Baseline – Bachelorarbeit"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "chromadb>=0.4",
    "pypdf>=4.0",
    "python-dotenv>=1.0",
    "tiktoken>=0.7",
    "odfpy>=1.4",
    "pandas>=2.0",
    "pymupdf>=1.24",
    "ragas>=0.2.0,<0.3",
    "langchain-openai>=0.3",
    "tqdm>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]
